# blackjack

./: Button.cpp  Button.h  CMakeLists.txt  clients.cpp  clients.h  compile_commands.json  game.cpp  game.h  main.cpp
include/: Card.cpp  Card.h  processCardImgs.py
scraps/: Dealer.cpp  Dealer.h  Player.cpp  Player.h  mouse.h
